Fix burger menu color on mobile

--- a/docs/mediaQueryMax840.css
+++ b/docs/mediaQueryMax840.css
@@ -130,7 +130,7 @@
   .mainMenu .pos-four div {
     width: 100%;
     height: 2px;
-    background-color: white;
+    /* background-color: white; */
     display: block;
   }
 
