--- a/docs/styleHomepage.css
+++ b/docs/styleHomepage.css
@@ -109,3 +109,10 @@ body {
         top: 41.5%;
     }
   }
+
+
+  @media screen and (max-width: 700px) {
+    .mainMenu .pos-four div {
+      background-color: white;
+    }
+  }
